mule-fundamentals/v/3.4/extending-mule.adoc
= Extending Mule

Out of the box, Mule comes with a healthy suite of pre-packaged features and functionality. In particular, Mule Studio comes bundled with two Enterprise trial runtimes and several Anypoint Connectors (known as Cloud Connectors in Studio). Robust as it is, you may wish to extend Mule's capabilities beyond what you get out of the box. 

        link:#ExtendingMule-addtomule[image:add_to_OOTB.png[add_to_OOTB]]     link:#ExtendingMule-devkit[image:add_with_devkit.png[add_with_devkit]]     link:#ExtendingMule-opensource[image:add_to_OSS.png[add_to_OSS]]

== Add to Mule

[cols=",",options="header]
|===
|Addition |Description |Studio Instructions |Standalone Instructions
|*Enterprise Licence*
|Ready to deploy to production? Acquire, then install an Enterprise license on your instance of Mule. (Using the out-of-the-box trial runtime, you can run applications for a maximum of 12 continuous hours.)
2+|link:/docs/display/34X/Installing+an+Enterprise+License[Installing an Enterprise License]
|*Community Runtime*
|Want to explore what the open source, community version of Mule has to offer? Add the Community runtime to your existing instance of Mule Studio, or download the latest Mule Community Standalone runtime listed under the "Standalone ESB Community Edition 3.4 Download" heading on the download site.
|link:/docs/display/34X/Adding+Community+Runtime[Adding Community Runtime]
|http://www.mulesoft.org/download-mule-esb-community-edition[Download Community Standalone]
|*Anypoint Connectors*
|Need to connect to a SaaS application? Check our http://www.mulesoft.org/connectors[library of Anypoint Connectors], and add them your instance of Mule.
2+|link:/docs/display/34X/Installing+Connectors[Installing Connectors]
|*Modules*
|Add suites of functionality to your instance of Mule such as, link:/docs/display/34X/Installing+Anypoint+Enterprise+Security[Anypoint Enterprise Security], link:/docs/display/34X/Mule+Healthcare+Toolkit[Mule Healthcare Toolkit] and link:#[APIkit].
2+|link:/docs/display/34X/Installing+Extensions[Installing Extensions]
|*New Versions*
|Update your instance of Mule to the lastest-and-greatest version available!
|link:/docs/display/34X/Installing+Extensions[Updating to new version]
|*Enterprise*: https://www.mulesoft.com/support-login[Customer Portal] +
 +
*Community:* http://www.mulesoft.org/download-mule-esb-community-edition[Download Community Standalone] 
|===

== Build Customized Functionality 

If you find that your integration development team regularly requires functionality not included with Mule out of the box, you can make use of the extensive link:/docs/display/34X/Anypoint+Connector+DevKit[Anypoint Connector DevKit] to build your own extensions. 

Use DevKit to:

* build your own *connectors* to use in applications you build in Studio
* build your own *modules* that you can add to an instance of Studio
* extend an existing Mule element to *customize* it to your needs

== Contribute to the Open Source Project

We're always interested in improvements, fixes, and ideas that will help solve problems or code faster. If you're interested in contributing and making Mule even better, bring it on! Our source code lives on github and we welcome pull requests for fixes and innovations. Follow the steps in the link:/docs/display/34X/Mule+Contributors+Guide[Mule Contributors' Guide] to prepare and submit your contribution.

== See Also

* Explore use case-based solutions to integration challenges in the link:/docs/display/34X/Shortcuts+to+Success[Shortcuts to Success].
* Learn Mule by link:/docs/display/34X/Mule+Examples[example].
* Build and deploy and application to link:#[CloudHub].
