mule-fundamentals/v/3.6/extending-mule.adoc
= Extending Mule
:keywords: connectors, devkit, open source, develop, extend, customize

Out of the box, Mule comes with a healthy suite of pre-packaged features and functionality. In particular, Anypoint Studio comes bundled with two Enterprise trial runtimes and several Anypoint Connectors. Robust as it is, you may wish to extend Mule's capabilities beyond what you get out of the box. 

<<Add to Mule>>]     image:/documentation/download/thumbnails/122751614/add_with_devkit.png?version=1&modificationDate=1386876992849Dev Kit]     image:/documentation/download/thumbnails/122751614/add_to_OSS.png?version=1&modificationDate=1386877018937Add to OSS]

== Add to Mule
[width="100%",cols=",",options="header"]
|===
|Addition |Description |Studio Instructions |Standalone Instructions
|*Enterprise License* |Ready to deploy to production? Acquire, then install an Enterprise license on your instance of Mule. (Using the out-of-the-box trial runtime, you can run applications for a maximum of 12 continuous hours.) 2+|link:/documentation/display/current/Installing+an+Enterprise+License[Installing an Enterprise License]
|*Community Runtime* |Want to explore what the open-source, community version of Mule has to offer? Add the Community runtime to your existing instance of Anypoint Studio, or download the latest Mule Community Standalone runtime listed under the "Standalone ESB Community Edition Download" heading on the download site. |link:/documentation/display/current/Adding+Community+Runtime[Adding Community Runtime] |http://www.mulesoft.org/download-mule-esb-community-edition[Download Community Standalone]
|*Anypoint Connectors* |Need to connect to a SaaS application? Check our http://www.mulesoft.org/connectors[library of Anypoint Connectors], and add them your instance of Mule. 2+|link:/documentation/display/current/Installing+Connectors[Installing Connectors]
|*Modules* |Add suites of functionality to your instance of Mule such as link:/documentation/display/current/Installing+Anypoint+Enterprise+Security[Anypoint Enterprise Security] and link:/documentation/display/current/Mule+Healthcare+Toolkit[Mule Healthcare Toolkit]. 2+|link:/documentation/display/current/Installing+Extensions[Installing Extensions]
|*New Versions* |Update your instance of Mule to the latest and greatest version available! |link:/documentation/display/current/Installing+Extensions[Updating to new version] |*Enterprise*: https://www.mulesoft.com/support-login[Customer Portal]

*Community:* http://www.mulesoft.org/download-mule-esb-community-edition[Download Community Standalone]
|===

== Build Customized Functionality 

If you find that your integration development team regularly requires functionality not included with Mule out of the box, you can make use of the extensive link:/documentation/display/current/Anypoint+Connector+DevKit[Anypoint Connector DevKit] to build your own extensions. 

Use DevKit to:

* Build your own *connectors* to use in Mule applications
* Build your own *modules* that you can add to an instance of Studio
* Extend an existing Mule element to *customize* it to your needs

== Contribute to the Open Source Project

We're always interested in improvements, fixes, and ideas that help solve problems or code faster. If you're interested in contributing and making Mule even better, bring it on! Our source code lives on GitHub and we welcome pull requests for fixes and innovations. Follow the steps in the https://github.com/mulesoft/mule/blob/mule-3.x/CONTRIBUTE.md[Mule Contributors' Guide] to prepare and submit your contribution.

== See Also

* Learn Mule by link:/documentation/display/current/Anypoint+Exchange[example].
* Build and deploy and application to link:/documentation/display/current/Hello+World+on+CloudHub[CloudHub].
